Scale gesture reference visual

--- a/my-space-invaders.html
+++ b/my-space-invaders.html
@@ -655,6 +655,9 @@
         Object.assign(previousKeyConfig, currentKeyConfig);
         return result;
       }
+      visualViewport.addEventListener("resize", () => {
+        document.getElementById("gesture-reference").style.transform = `translate(-50%, -50%) scale(${1 / visualViewport.scale})`;
+      });
     </SCRIPT>
     <!-- GAMEPLAY -->
     <SCRIPT type="text/javascript">
