--- a/my-space-invaders.html
+++ b/my-space-invaders.html
@@ -41,7 +41,8 @@
       }
       #game-container:fullscreen #game-field {
         border-radius: 0;
-        max-height: calc(100vh - 8px);
+        height: calc(100vh - 8px);
+        max-height: none;
       }
       .game-char {
         color: deeppink;
