--- a/my-space-invaders.html
+++ b/my-space-invaders.html
@@ -179,8 +179,10 @@
         border-radius: 4px;
         color: black;
         display: inline-block;
+        font: 1rem;
         font-weight: bold;
         padding: 2px 4px;
+        vertical-align: baseline;
       }
       a {
         color: cornflowerblue;
