--- a/my-space-invaders.html
+++ b/my-space-invaders.html
@@ -303,6 +303,8 @@
       <LI>Swipe (and hold) to the left of the touch reference: Move to the left.</LI>
       <LI>Swipe (and hold) to the right of the touch reference: Move to the right.</LI>
       <LI>Swipe (and hold) upwards above the touch reference: Shoot a rocket.</LI>
+      <LI>Note that the edges of the screen remain reserved for pan and zoom gestures, so the touch reference doesn't activate there. This provides an escape hatch when zoomed in too much on the game.</LI>
+      <LI>Also note that when the game is blurred, pan and zoom gestures are also enabled and when the game is active, a kebab menu button appears at the top of the screen. Opening this menu will blur the game.</LI>
     </UL>
     <H2>Game description</H2>
     <P>
