--- a/my-space-invaders.html
+++ b/my-space-invaders.html
@@ -44,7 +44,7 @@
         height: calc(100vh - 8px);
         max-height: none;
       }
-      :root.ios-fullscreen #game-container {
+      :root.ios-fullscreen #game-field {
         border-radius: 0;
         height: calc(100vh - 8px);
         max-height: none;
@@ -473,7 +473,7 @@
       const fullscreenButton = document.getElementById("game-button-fullscreen");
       const toggleFullscreen = () => {
         if (isIosSafari()) {
-          const classes = document.rootElement.classList;
+          const classes = document.documentElement.classList;
           if (classes.contains("ios-fullscreen")) {
             classes.remove("ios-fullscreen");
             const metaElement = document.querySelector("head > meta[name=\"viewport\"]");
