Fix iOS fullscreen game bar inclusion

--- a/my-space-invaders.html
+++ b/my-space-invaders.html
@@ -195,8 +195,8 @@
       a:active {
         color: darkseagreen;
       }
-      :root.ios-fullscreen body > :not(#game-container,#game-bar) {
-        display: none;
+      :root.ios-fullscreen body > :not(#game-container) {
+        display: none !important;
       }
       :root.ios-fullscreen body {
         touch-action: none;
