--- a/my-space-invaders.html
+++ b/my-space-invaders.html
@@ -46,7 +46,7 @@
       }
       :root.ios-fullscreen #game-field {
         border-radius: 0;
-        height: calc(100vh - 8px);
+        height: calc(100% - 8px);
         max-height: none;
       }
       .game-char {
@@ -198,7 +198,11 @@
       :root.ios-fullscreen body > :not(#game-container) {
         display: none !important;
       }
+      :root.ios-fullscreen body > #game-container {
+        flex: 1;
+      }
       :root.ios-fullscreen body {
+        padding: 0;
         touch-action: none;
       }
     </STYLE>
