--- a/my-space-invaders.html
+++ b/my-space-invaders.html
@@ -184,7 +184,7 @@
         border-radius: 4px;
         color: black;
         display: inline-block;
-        font: 1rem;
+        font-size: 1rem;
         font-weight: bold;
         padding: 2px 4px;
         vertical-align: baseline;
