--- a/my-space-invaders.html
+++ b/my-space-invaders.html
@@ -205,6 +205,9 @@
         padding: 0;
         touch-action: none;
       }
+      * {
+        text-size-adjust: none;
+      }
     </STYLE>
   </HEAD>
   <BODY>
