Increase visibility of controls section

--- a/my-space-invaders.html
+++ b/my-space-invaders.html
@@ -31,7 +31,7 @@
         border-radius: 8px;
         filter: blur(4px);
         image-rendering: pixelated;
-        max-height: calc(100vh - 34px - 16px);
+        max-height: calc(100vh - 34px - 56px - 96px);
         object-fit: contain;
         padding: 4px;
         width: calc(100% - 8px);
