Fix conditional instruction not popping up

--- a/my-space-invaders.html
+++ b/my-space-invaders.html
@@ -1163,8 +1163,8 @@
               charElement.style.top = `calc(50% + (${centerOffset.y}px))`;
             });
             const conditionalElement = document.getElementById("conditional");
-            if (conditional) {
-              conditional.style.display = "block";
+            if (conditionalElement) {
+              conditionalElement.style.display = "block";
             }
           }
         };
